// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Integral Input Forms 1`] = `
Array [
  0.7,
  0,
  0,
  0.10109,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Input Forms 2`] = `
Array [
  0.42,
  0,
  0,
  0.06454,
  0,
  0.42,
  0,
  -0.1204,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Input Forms 3`] = `
Array [
  0.28,
  0,
  0,
  0.00854,
  0,
  0.28,
  0,
  0.11774,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Input Forms 4`] = `
Array [
  0.10109,
  0,
  0,
  0,
  0,
  0.2121,
  0,
  -0.0756,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
